--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,13 @@ android {
 
 dependencies {
 
+    // Dagger
+    implementation "com.google.dagger:dagger:2.40.5"
+    implementation "com.google.dagger:dagger-android:2.40.2"
+    implementation "com.google.dagger:dagger-android-support:2.40.2"
+    kapt "com.google.dagger:dagger-compiler:2.40.5"
+    kapt "com.google.dagger:dagger-android-processor:2.40.2"
+
     //RxJava3
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
     implementation 'io.reactivex.rxjava3:rxjava:3.1.3'
