--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ android {
 
 dependencies {
 
+    // Coroutine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+
     // Dagger
     implementation "com.google.dagger:dagger:2.40.5"
     implementation "com.google.dagger:dagger-android:2.40.2"
