--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,20 @@ android {
 
 dependencies {
 
+    //Koin for Android
+    //Current version
+    def koin_version= "3.1.2"
+    //Koin core features
+    implementation "io.insert-koin:koin-core:$koin_version"
+    //Koin main features for Android (Scope,ViewModel ...)
+    implementation "io.insert-koin:koin-android:$koin_version"
+    //Koin Java Compatibility
+    implementation "io.insert-koin:koin-android-compat:$koin_version"
+
     // Coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
     // Dagger
     implementation "com.google.dagger:dagger:2.40.5"
