--- a/historyScreen/build.gradle
+++ b/historyScreen/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     //Koin for Android
     implementation Koin.koin_android
     implementation Koin.koin_view_model
+    implementation 'androidx.test.ext:junit-ktx:1.1.3'
 
     //Test
     testImplementation TestImpl.junit
