--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,9 +20,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+
     compileOptions {
         sourceCompatibility Config.java_version
         targetCompatibility Config.java_version
+    }
+
+    testOptions.unitTests {
+        includeAndroidResources = true
+
     }
 }
 
@@ -68,6 +75,16 @@ dependencies {
     androidTestImplementation TestImpl.runner
     androidTestImplementation TestImpl.espresso
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+
+    // AndroidX Test - JVM testing
+    testImplementation "androidx.test.ext:junit-ktx:1.1.3"
+    testImplementation "androidx.test:core-ktx:1.4.0"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.robolectric:robolectric:4.5.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
+    testImplementation "io.insert-koin:koin-test:2.1.6"
+
 
     //Mockito
     testImplementation Mockito.mockito
