--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id  'kotlin-android-extensions'
 }
 
 android {
@@ -31,6 +32,7 @@ android {
         includeAndroidResources = true
 
     }
+
 }
 
 dependencies {
@@ -63,6 +65,9 @@ dependencies {
     //Koin for Android
     implementation Koin.koin_android
     implementation Koin.koin_view_model
+//    implementation "io.insert-koin:koin-core:3.1.2"
+    testImplementation "io.insert-koin:koin-test:3.0.1"
+    testImplementation "io.insert-koin:koin-test-junit4:3.0.1"
 
     //Room
     implementation Room.runtime
@@ -70,28 +75,31 @@ dependencies {
     implementation Room.room_ktx
 
 
-    //Test
-    testImplementation TestImpl.junit
-    androidTestImplementation TestImpl.runner
-    androidTestImplementation TestImpl.espresso
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 
     // AndroidX Test - JVM testing
     testImplementation "androidx.test.ext:junit-ktx:1.1.3"
     testImplementation "androidx.test:core-ktx:1.4.0"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation "org.robolectric:robolectric:4.5.1"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.0"
-    testImplementation "io.insert-koin:koin-test:2.1.6"
-
-
-    //Mockito
-    testImplementation Mockito.mockito
-    testImplementation Mockito.mockitoInline
-    testImplementation(Mockito.mockitoKotlin) {
+    testImplementation 'org.mockito:mockito-inline:2.8.9'
+    testImplementation "org.mockito:mockito-core:3.4.6"
+    testImplementation('com.nhaarman:mockito-kotlin:1.5.0') {
         exclude group: 'org.jetbrains.kotlin'
         exclude group: 'org.mockito'
     }
 
+    //Test core
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    //Robolectric
+    testImplementation 'org.robolectric:robolectric:4.5.1'
+    testImplementation 'androidx.test:core:1.4.0'
+    testImplementation 'androidx.test:runner:1.4.0'
+    testImplementation 'androidx.test.ext:junit:1.1.3'
+    testImplementation 'androidx.test.ext:truth:1.4.0'
+    testImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
 }
