--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id  'kotlin-android-extensions'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -45,9 +45,8 @@ dependencies {
     implementation project(Modules.historyscreen)
 
 
-
     //Picasso
-    
+
     implementation Picasso.picasso
 
     //Design
@@ -75,8 +74,6 @@ dependencies {
     implementation Room.room_ktx
 
 
-
-
     // AndroidX Test - JVM testing
     testImplementation "androidx.test.ext:junit-ktx:1.1.3"
     testImplementation "androidx.test:core-ktx:1.4.0"
@@ -102,4 +99,9 @@ dependencies {
     testImplementation 'androidx.test.ext:truth:1.4.0'
     testImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     testImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
+
+    //UI Automator
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+
+
 }
