--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,15 @@ android {
 
     }
 
+    sourceSets {
+        androidTest {
+            java.srcDirs += "src/sharedTestData/java"
+        }
+        test {
+            java.srcDirs += "src/sharedTestData/java"
+        }
+    }
+
 }
 
 dependencies {
@@ -70,6 +79,8 @@ dependencies {
 
     //Room
     implementation Room.runtime
+    androidTestImplementation 'androidx.test:rules:1.4.1-alpha05'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0-alpha05'
     kapt Room.compiler
     implementation Room.room_ktx
 
@@ -89,7 +100,7 @@ dependencies {
     //Test core
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha05'
 
     //Robolectric
     testImplementation 'org.robolectric:robolectric:4.5.1'
@@ -97,7 +108,7 @@ dependencies {
     testImplementation 'androidx.test:runner:1.4.0'
     testImplementation 'androidx.test.ext:junit:1.1.3'
     testImplementation 'androidx.test.ext:truth:1.4.0'
-    testImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    testImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha05'
     testImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
 
     //UI Automator
